[tool.poetry]
name = "dive-graph"
version = "0.3.0"
description = ""
authors = ["Djane Rey Mabelin <d.mabelin@arcanys.com>"]
readme = "README.md"
packages = [
    { include = "dive_graph" }
]

[tool.poetry.dependencies]
python = "^3.9"
freediving = {git = "git@github.com:djaney/freedive.git", tag = "v0.4.0"}
click = "^8.1.7"
matplotlib = "^3.8.4"

[tool.poetry.scripts]
dive-graph = "dive_graph.cli:show_graph"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

